<resources>
    <string name="app_name">mobilki</string>
    <string name="create_new_account">Create new account</string>
    <string name="already_registered_n_log_in_here">Already registered?  \nLog in here</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>
